--- a/css/main.css
+++ b/css/main.css
@@ -1308,9 +1308,19 @@ img {
   }
 }
 
+.portfolio__item {
+  width: 450px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio__item {
+    width: 370px;
+  }
+}
+
 .portfolio__link {
   display: block;
   width: 450px;
+  height: 100%;
   background-color: var(--basic-color-white);
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
