--- a/sass/layouts/portfolio/_portfolio.scss
+++ b/sass/layouts/portfolio/_portfolio.scss
@@ -14,7 +14,11 @@
   }
 }
 .portfolio__item {
+  width: 450px;
   @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
   }
 }
 
@@ -27,6 +31,7 @@
 .portfolio__link {
   display: block;
   width: 450px;
+  height: 100%;
   background-color: var(--basic-color-white);
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
