--- a/css/main.css
+++ b/css/main.css
@@ -1244,12 +1244,18 @@ img {
   flex-wrap: wrap;
   justify-content: flex-start;
   margin: -8px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 @media screen and (min-width: 768px) {
   .sorting__list {
     flex-wrap: nowrap;
     justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .sorting__list {
+    margin-bottom: 50px;
   }
 }
 
