--- a/sass/layouts/portfolio/_sorting.scss
+++ b/sass/layouts/portfolio/_sorting.scss
@@ -3,12 +3,17 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   margin: -8px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   @media screen and (min-width: 768px) {
     flex-wrap: nowrap;
     justify-content: center;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
   }
 }
+
 .sorting__item {
   margin: 8px;
 }
