--- a/css/main.css
+++ b/css/main.css
@@ -1313,9 +1313,15 @@ img {
 .portfolio__item {
   width: 450px;
 }
+.portfolio__item:not(:last-child) {
+  margin-bottom: 30px;
+}
 @media screen and (min-width: 768px) {
   .portfolio__item {
     width: 354px;
+  }
+  .portfolio__item:not(:last-child) {
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1367,7 +1373,7 @@ img {
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
-  height: 294px;
+  height: 100%;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
