--- a/sass/layouts/portfolio/_portfolio.scss
+++ b/sass/layouts/portfolio/_portfolio.scss
@@ -13,9 +13,14 @@
 }
 .portfolio__item {
   width: 450px;
-
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 768px) {
     width: 354px;
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: 1200px) {
     width: 370px;
@@ -62,7 +67,7 @@
   bottom: 0;
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
-  height: 294px;
+  height: 100%;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .portfolio__link:hover &,
