--- a/css/main.css
+++ b/css/main.css
@@ -1306,6 +1306,7 @@ img {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: stretch;
     gap: 30px;
   }
 }
@@ -1331,9 +1332,9 @@ img {
 }
 
 .portfolio__link {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
   background-color: var(--basic-color-white);
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
