--- a/sass/layouts/portfolio/_portfolio.scss
+++ b/sass/layouts/portfolio/_portfolio.scss
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: stretch;
     gap: 30px;
   }
 }
@@ -27,9 +28,10 @@
   }
 }
 .portfolio__link {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  height: 100%;
+
   background-color: var(--basic-color-white);
   cursor: pointer;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
