--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,6 @@ img {
   margin-left: auto;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  margin-left: auto;
   z-index: 999;
 }
 @media screen and (min-width: 768px) {
@@ -449,6 +448,8 @@ img {
 }
 
 .menu__contacts-list {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 64px;
 }
 
@@ -457,6 +458,10 @@ img {
 }
 
 .menu__contacts-link {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -464,8 +469,18 @@ img {
   color: var(--accent-color);
 }
 
+.menu__contacts-link--mail {
+  font-size: 24px;
+  line-height: 1.16;
+}
+
+.menu__contacts-link--tel {
+  color: var(--accent-color);
+}
+
 .main__social-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .main__social-item {
