--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,7 +3,6 @@
   margin-left: auto;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  margin-left: auto;
   z-index: 999;
   @media screen and (min-width: 768px) {
     display: none;
@@ -32,7 +31,7 @@
   .menu__button:focus & {
     fill: var(--accent-color);
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     display: none;
   }
 }
@@ -89,14 +88,19 @@
 .menu__nav-link--current {
   color: var(--accent-color);
 }
-
 .menu__contacts-list {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 64px;
 }
 .menu__contacts-item:nth-child(1) {
   margin-bottom: 32px;
 }
 .menu__contacts-link {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
   color: var(--secondary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -104,8 +108,16 @@
     color: var(--accent-color);
   }
 }
+.menu__contacts-link--mail {
+  font-size: 24px;
+  line-height: 1.16;
+}
+.menu__contacts-link--tel {
+  color: var(--accent-color);
+}
 .main__social-list {
   display: flex;
+  flex-wrap: wrap;
 }
 .main__social-item {
   position: relative;
