--- a/css/main.css
+++ b/css/main.css
@@ -125,13 +125,13 @@ img {
 .backdrop {
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 101;
+  z-index: 3;
   overflow-y: scroll;
 }
 
@@ -158,6 +158,11 @@ img {
 }
 .is-hidden .modal {
   transform: scale(1.1) translate(-50%, -50%);
+}
+
+.modal.is-hidden .menu-icon,
+.cross-icon {
+  display: block;
 }
 
 @media screen and (min-width: 1200px) {
@@ -351,7 +356,7 @@ img {
   margin-left: auto;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  z-index: 999;
+  z-index: 2;
 }
 @media screen and (min-width: 768px) {
   .menu__button {
@@ -367,8 +372,7 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .cross-icon,
-.menu-icons {
+  .menu-icons {
     display: none;
   }
 }
@@ -404,7 +408,7 @@ img {
   .menu__container {
     display: none;
     position: fixed;
-    z-index: 100;
+    z-index: 1;
     top: 0;
     width: 100vw;
     height: 100vh;
@@ -414,9 +418,9 @@ img {
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
+    overflow: auto;
     background: var(--basic-color-white);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-    overflow: auto;
   }
   .menu__container.is-open {
     display: flex;
