--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,13 +1,13 @@
 .backdrop {
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 101;
+  z-index: 3;
   overflow-y: scroll;
 }
 .is-hidden {
@@ -34,7 +34,11 @@
     transform: scale(1.1) translate(-50%, -50%);
   }
 }
-@media screen and (min-width: $desktop) {
+.modal.is-hidden .menu-icon,
+.cross-icon {
+  display: block;
+}
+@media screen and (min-width: 1200px) {
   .modal {
     max-width: 528px;
     height: 581px;
@@ -71,7 +75,7 @@
   color: var(--first-text-color);
   margin-bottom: 12px;
 }
-@media screen and (min-width: $desktop) {
+@media screen and (min-width: 1200px) {
   .modal__text {
     line-height: 1.15;
   }
