--- a/css/main.css
+++ b/css/main.css
@@ -146,7 +146,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: scale(1) translate(-50%, -50%);
   background-color: var(--basic-color-white);
   max-width: 450px;
   width: 100%;
@@ -154,10 +154,9 @@ img {
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
-  overflow: auto;
 }
 .is-hidden .modal {
-  transform: scale(1.1) translate(-50%, -50%);
+  transform: scale(0) translate(-50%, -50%);
 }
 
 @media screen and (min-width: 1200px) {
@@ -401,25 +400,27 @@ img {
 
 @media screen and (max-width: 767.98px) {
   .menu__container {
-    display: none;
     position: fixed;
     z-index: 1;
     top: 0;
+    left: 0;
+    transform: scale(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100vw;
     height: 100vh;
-    left: 0;
     padding: 48px 10px 48px 40px;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    overflow: auto;
+    overflow-y: scroll;
     background: var(--basic-color-white);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   }
   .menu__container.is-open {
     display: flex;
     flex-direction: column;
+    transform: scale(1);
   }
 }
 @media screen and (min-width: 768px) {
@@ -1429,6 +1430,7 @@ img {
   position: absolute;
   left: 0;
   bottom: 0;
+  overflow-y: scroll;
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
   height: 100%;
