--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -43,19 +43,20 @@
 }
 @media screen and (max-width: 767.98px) {
   .menu__container {
-    display: none;
     position: fixed;
     z-index: 1;
     top: 0;
+    left: 0;
+    transform: scale(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100vw;
     height: 100vh;
-    left: 0;
     padding: 48px 10px 48px 40px;
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
     letter-spacing: 0.02em;
-    overflow: auto;
+    overflow-y: scroll;
     background: var(--basic-color-white);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
       0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -63,6 +64,7 @@
     &.is-open {
       display: flex;
       flex-direction: column;
+      transform: scale(1);
     }
   }
 }
