--- a/sass/layouts/portfolio/_portfolio.scss
+++ b/sass/layouts/portfolio/_portfolio.scss
@@ -13,7 +13,6 @@
   }
 }
 .portfolio__item {
-  // max-width: 450px;
   &:not(:last-child) {
     margin-bottom: 30px;
   }
@@ -67,6 +66,7 @@
   position: absolute;
   left: 0;
   bottom: 0;
+  overflow-y: scroll;
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
   height: 100%;
