--- a/css/main.css
+++ b/css/main.css
@@ -404,7 +404,7 @@ img {
     z-index: 1;
     top: 0;
     left: 0;
-    transform: scale(0);
+    transform: translatex(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100vw;
     height: 100vh;
@@ -420,7 +420,7 @@ img {
   .menu__container.is-open {
     display: flex;
     flex-direction: column;
-    transform: scale(1);
+    transform: translatex(0%);
   }
 }
 @media screen and (min-width: 768px) {
