--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -47,7 +47,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    transform: scale(0);
+    transform: translatex(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100vw;
     height: 100vh;
@@ -64,7 +64,7 @@
     &.is-open {
       display: flex;
       flex-direction: column;
-      transform: scale(1);
+      transform: translatex(0%);
     }
   }
 }
